--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,30 @@
-name: Deploy Community Resource Mapper
+name: Debug CI
 
-# When should this workflow run?
 on:
   push:
-    branches: [ main, develop ]  # Run when code pushed to these branches
-  pull_request:
-    branches: [ main ]           # Run when someone creates a pull request
+    branches: [ main ]
 
-# What jobs should run?
 jobs:
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest       # Use GitHub's Ubuntu server
+  debug:
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4   # Download your code to the runner
+      uses: actions/checkout@v4
       
+    - name: Debug - List files
+      run: |
+        echo "Current directory:"
+        pwd
+        echo "Files in current directory:"
+        ls -la
+        echo "Looking for package-lock.json:"
+        find . -name "package-lock.json" -type f
+        
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'        # Use Node.js version 18
+        node-version: '18'
         
     - name: Install dependencies
-      run: npm ci                 # Install your packages
-      
-    - name: Run tests
-      run: npm test               # Run your test suite
-      
+      run: npm ci
