--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
 name: Debug CI
-
 on:
   push:
     branches: [ main ]
-
 jobs:
   debug:
     runs-on: ubuntu-latest
@@ -18,8 +16,8 @@ jobs:
         pwd
         echo "Files in current directory:"
         ls -la
-        echo "Looking for package-lock.json:"
-        find . -name "package-lock.json" -type f
+        echo "Looking for package.json:"
+        find . -name "package.json" -type f
         
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -27,4 +25,5 @@ jobs:
         node-version: '18'
         
     - name: Install dependencies
+      working-directory: ./frontend  # Replace with your actual folder name
       run: npm install
