--- a/community-resource-mapper/package.json
+++ b/community-resource-mapper/package.json
@@ -1,42 +1,22 @@
 {
-  "name": "community-resource-mapper",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "seed": "tsx prisma/seed.ts"
-  },
   "dependencies": {
     "@prisma/client": "^6.13.0",
-    "@tanstack/react-query": "^5.84.2",
-    "@types/ioredis": "^4.28.10",
-    "@types/mapbox-gl": "^3.4.1",
-    "@types/nodemailer": "^7.0.0",
-    "@upstash/ratelimit": "^2.0.6",
-    "@upstash/redis": "^1.35.3",
-    "ioredis": "^5.7.0",
-    "mapbox-gl": "^3.14.0",
-    "next": "15.4.6",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express-rate-limit": "^7.5.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.3",
+    "morgan": "^1.10.0",
     "next-pwa": "^5.6.0",
-    "nodemailer": "^7.0.5",
+    "nodemon": "^3.1.10",
     "prisma": "^6.13.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "zod": "^4.0.17"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
-    "tsx": "^4.20.4",
-    "typescript": "^5"
+    "jest": "^30.0.4",
+    "supertest": "^7.1.3"
   }
 }
