--- a/community-resource-mapper/package.json
+++ b/community-resource-mapper/package.json
@@ -18,5 +18,15 @@
   "devDependencies": {
     "jest": "^30.0.4",
     "supertest": "^7.1.3"
-  }
+  },
+  "name": "community-resource-mapper",
+  "version": "1.0.0",
+  "description": "",
+  "main": "test-database.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
