--- a/community-resource-mapper/.github/workflows/deploy.yml
+++ b/community-resource-mapper/.github/workflows/deploy.yml
@@ -20,17 +20,17 @@ jobs:
       with:
         node-version: '18'
         
-    - name: Debug working dir
+    - name: Debug repo contents
       run: |
-        echo "Current directory:"
+        echo "PWD:"
         pwd
-        echo "Files in current directory:"
+        echo "Top-level files:"
         ls -lah
+        echo "Looking for package.json:"
+        find . -maxdepth 2 -name "package.json"
 
     - name: Install dependencies
       run: npm ci
-      working-directory: ./
 
     - name: Run tests
       run: npm test
-      working-directory: ./
