--- a/community-resource-mapper/package.json
+++ b/community-resource-mapper/package.json
@@ -24,7 +24,7 @@
   "description": "",
   "main": "test-database.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "test": "jest --passWithNoTests"
   },
   "keywords": [],
   "author": "",
