--- a/community-resource-mapper/package.json
+++ b/community-resource-mapper/package.json
@@ -9,9 +9,12 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
+    "next": "^15.4.7",
     "next-pwa": "^5.6.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.13.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
@@ -24,7 +27,11 @@
   "description": "",
   "main": "test-database.js",
   "scripts": {
-  "test": "jest --passWithNoTests"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest --passWithNoTests"
   },
   "keywords": [],
   "author": "",
