--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@sentry/nextjs": "^10.5.0",
     "@tailwindcss/postcss": "^4.1.12",
     "autoprefixer": "^10.4.0",
     "bcryptjs": "^3.0.2",
