--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -3,7 +3,7 @@ name: Database Backup
 on:
   schedule:
     - cron: "0 3 * * *" # runs daily at 3AM UTC
-  workflow_dispatch: # allows manual trigger from Actions tab
+  workflow_dispatch: # allows manual trigger
 
 jobs:
   backup:
