--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -4,6 +4,11 @@ on:
   schedule:
     - cron: "0 3 * * *" # runs daily at 3AM UTC
   workflow_dispatch: # allows manual trigger
+  push:
+    branches:
+      - develop
+    paths:
+      - '.github/workflows/db-backup.yml'
 
 jobs:
   backup:
