fix s3 backup workflow

--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -24,10 +24,12 @@ jobs:
         run: ls -la
 
       - name: Upload to S3
-        uses: aws-actions/s3-sync@v2
+        uses: jakejarvis/s3-sync-action@master
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-          source: .
-          destination: s3://community-db-backups-evanmeli1/${{ github.run_id }}
+          args: --exact-timestamps
+        env:
+          AWS_S3_BUCKET: community-db-backups-evanmeli1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          SOURCE_DIR: .
