--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Install PostgreSQL 17 client
         run: |
+          sudo apt-get update
+          sudo apt-get install -y wget gnupg
           sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
           sudo apt-get update
