--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -4,6 +4,11 @@ on:
   schedule:
     - cron: "0 3 * * *" # daily at 3AM UTC
   workflow_dispatch: # allow manual run from Actions tab
+  push:
+    branches:
+      - main  # or master, depending on your default branch
+    paths:
+      - '.github/workflows/db-backup.yml'  # only run when this file changes
 
 jobs:
   backup:
