--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -2,13 +2,13 @@ name: Database Backup
 
 on:
   schedule:
-    - cron: "0 3 * * *" # daily at 3AM UTC
+    - cron: "0 3 * * *" # daily at 3AM UTC (fixed)
   workflow_dispatch: # allow manual run from Actions tab
   push:
     branches:
-      - main  # or master, depending on your default branch
+      - develop  # changed to match your branch
     paths:
-      - '.github/workflows/db-backup.yml'  # only run when this file changes
+      - '.github/workflows/db-backup.yml'
 
 jobs:
   backup:
