--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
     "@sentry/nextjs": "^10.5.0",
     "@tailwindcss/postcss": "^4.1.12",
     "autoprefixer": "^10.4.0",
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express-rate-limit": "^7.5.1",
+    "framer-motion": "^12.23.12",
     "ioredis": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
     "mapbox-gl": "^2.15.0",
