--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
     "@sentry/nextjs": "^10.5.0",
     "@tailwindcss/postcss": "^4.1.12",
@@ -28,6 +29,7 @@
     "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
     "next": "13.5.6",
+    "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "nodemon": "^3.1.10",
     "postcss": "^8.4.0",
@@ -40,6 +42,7 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
