--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "export": "next export",
     "lint": "next lint",
-    "test": "jest --passWithNoTests",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
@@ -42,12 +43,16 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "jest": "^30.0.4",
-    "supertest": "^7.1.3",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.0.5",
+    "jest-environment-node": "^30.0.5",
+    "supertest": "^7.1.4",
     "tsx": "^4.20.4",
     "typescript": "^5.0.0"
   }
